# gitparse

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: 01_repository_info.py  02_file_tree.py  03_readme_content.py  04_dependencies.py  05_language_stats.py  06_file_content.py  07_all_contents.py  08_directory_operations.py  all.py  all_examples.py  deps.py  full_example.py  minimal_example.py
gitparse/: __init__.py  cli.py
gitparse/core/: __init__.py  async_repo.py  async_repo_analyzer.py  exceptions.py  repo.py  repository_analyzer.py
gitparse/core/functions/: __init__.py  dependencies.py  directory.py  file_content.py  file_tree.py  language_stats.py  readme.py  repository_info.py  statistics.py
gitparse/parsers/: __init__.py  constants.py
gitparse/schema/: __init__.py  config.py
gitparse/utils/: __init__.py  fs_utils.py
gitparse/vars/: __init__.py  exclude_patterns.py  file_types.py  git_hosts.py  limits.py
tests/: __init__.py  conftest.py  test_basic.py  test_repo.py
tests/core/: __init__.py  test_dependencies.py  test_file_content.py  test_file_tree.py  test_language_stats.py  test_readme.py  test_repo.py  test_repo_info.py  test_repo_stats.py
